# sales-pitch-demo

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  code-analysis-report.html  code-analysis-report.md  pyproject.toml  test_cloud.py
.foundry/: .deployment.json
functions/: requirements.txt
functions/callback/: __init__.py  function.json
functions/login/: __init__.py  function.json
functions/shared/: auth_exchange.py
scripts/: auth_server.py  provision_agent_id.py  seed_graph_data.py  seed_search_index.py
src/: agent.py  auth.py  config.py  invoke.py  main.py  middleware.py  server.py  teams_host.py  workflow.py
src/mock_data/: brands.json  fabric_iq_data.json  foundry_iq_data.json  work_iq_data.json
src/skills/: __init__.py  pptx_skill.py
src/skills/presentation/: SKILL.md
src/tools/: __init__.py  doc_generator.py  fabric_iq.py  foundry_iq.py  work_iq.py
tests/: test_doc_generator.py  test_workflow.py
