[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-pres-demo"
version = "0.1.0"
description = "Sales Presentation Preparation Agent — researches across Microsoft IQs and generates meeting prep documents"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.0",
    "python-pptx>=1.0.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "mcp>=1.0.0",
    "azure-storage-blob>=12.19.0",
    "azure-identity>=1.15.0",
]

[project.optional-dependencies]
agent = [
    "agent-framework-core>=1.0.0rc1",
    "agent-framework-github-copilot>=1.0.0b260219",
    "opentelemetry-semantic-conventions-ai==0.4.13",
    "azure-ai-agentserver-core>=1.0.0b10",
    "azure-monitor-opentelemetry-exporter>=1.0.0b46",
    "starlette<1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sales-prep-server = "src.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.uv]
# Most agent-framework / Azure AI packages are pre-release only right now.
prerelease = "allow"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
